--- a/classes/cleric/index.html
+++ b/classes/cleric/index.html
@@ -190,7 +190,7 @@
 	<li>你施放法術的行為使你遠離神祇──直到下次你進行通神動作之前，你的施放法術動作將獲得持續-1。</li>
 	<li>在你施法後，該法術被你的神祇收回。直到你下次進行通神動作並再次選擇被授予該法術之前，你都無法再次施放該法術。</li></ul>
 <p class="NoIndent">
-	注意，維持一個帶有<tag>持續</tag>標籤的法術效果有時也導致你在進行施放法術動作時承受減值。</p></div></div></div></div>
+	注意，維持一個帶有<tag>持續</tag>標籤的法術效果，有時會導致你在進行施放法術動作時承受減值。</p></div></div></div></div>
 <hr/>
 
 <h2>陣營</h2>
@@ -264,8 +264,8 @@
 <p class="NoIndent">
 	當你進行施展法術動作時，即使你擲出10+結果，你也可以選擇7-9結果的選項。如果你這麼做，你可以從下列效果中選擇一項：</p>
 <ul>
-	<li>該法術的效果變為兩倍。</li>
-	<li>該法術影響的目標數量變為兩倍。</li></ul></div>
+	<li>該法術的效果變為兩倍</li>
+	<li>該法術影響的目標數量變為兩倍</li></ul></div>
 
 <div class="Move"><h3 class="MoveName">祈求神導 (Orison for Guidance)</h3>
 <p class="NoIndent">
@@ -325,8 +325,8 @@
 <p class="NoIndent">
 	當你進行施展法術動作時，若擲出10-11，你可以選擇7-9結果中的選項。如果你這麼做，你可以從下列效果中選擇一項。若擲出12+，則你可以直接從下列效果中選擇一項。</p>
 <ul>
-	<li>該法術的效果變為兩倍。</li>
-	<li>該法術影響的目標數量變為兩倍。</li></ul></div>
+	<li>該法術的效果變為兩倍</li>
+	<li>該法術影響的目標數量變為兩倍</li></ul></div>
 
 <div class="Move"><h3 class="MoveName">兼職新手 (Multiclass Dabbler)</h3>
 <p class="NoIndent">
