--- a/classes/cleric/spells/index.html
+++ b/classes/cleric/spells/index.html
@@ -116,7 +116,7 @@
 
 <div class="Spell"><h3 class="SpellName">光亮術 (Light)<span class="Tags">	禱念</span></h3>
 <p class="NoIndent">
-	一個你所觸碰的物品將發出聖光，其亮度與火炬相當。它並不會散發熱量或聲音，也不需要燃料，但除此之外的特性便與尋常火炬一模一樣。你可以自由控制光輝的色彩。只要你在場，這個法術便會持續發揮效果。</p></div>
+	一個被你觸碰的物品將發出聖光，其亮度與火炬相當。它並不會散發熱量或聲音，也不需要燃料，但除此之外的特性便與尋常火炬一模一樣。你可以自由控制光輝的色彩。只要你在場，這個法術便會持續發揮效果。</p></div>
 
 <div class="Spell"><h3 class="SpellName">聖潔淨化 (Sanctify)<span class="Tags">	禱念</span></h3>
 <p class="NoIndent">
@@ -221,7 +221,7 @@
 
 <div class="Spell"><h3 class="SpellName">錮魂術 (Trap Soul)<span class="Tags">	等級 5</span></h3>
 <p class="NoIndent">
-	你將一個垂死生物的靈魂囚禁在一顆寶石之中。被囚禁的生物會意識到自己被囚禁，且仍能透過法術、談判、和其他效果而被操弄。所有針對被囚禁生物所進行的動作都將獲得+1加值。你可以在任何時候將靈魂從中釋放，然而一旦被釋放，它就再也無法被重新禁錮。</p></div>
+	你將一個垂死生物的靈魂囚禁在一顆寶石之中。被囚禁的生物會意識到自己被囚禁，彈仍能透過法術、談判、和其他效果而被操弄。所有針對被囚禁生物所進行的動作都將獲得 +1 加值。你可以在任何時候將靈魂從中釋放，然而一旦被釋放，它就再也無法被重新禁錮。</p></div>
 <hr/>
 
 <div><h1>等級7 法術</h1></div>
