--- a/classes/paladin/index.html
+++ b/classes/paladin/index.html
@@ -240,7 +240,7 @@
 
 <div class="Move"><h3 class="MoveName">堅毅防衛者 (Staunch Defender)</h3>
 <p class="NoIndent">
-	當你進行保衛動作時，你永遠可以獲得 +1 掌握，即使你擲出6-的結果也一樣。</p></div>
+	當你進行保衛動作時，你永遠獲得 +1 掌握，即使你擲出6-的結果也一樣。</p></div>
 
 <div class="Move"><h3 class="MoveName">預備打擊 (Setup Strike)</h3>
 <p class="NoIndent">
@@ -277,7 +277,7 @@
 <div class="Move"><h3 class="MoveName">無敵防衛者 (Impervious Defender)</h3>
 <p class="Requirement">取代: 堅毅防衛者</p>
 <p class="NoIndent">
-	當你進行保衛動作時，你永遠可以獲得 +1 掌握，即使你擲出6-的結果也一樣。當你在保衛動作中擲出12+的結果時，你不獲得掌握，而是改為使最接近的攻擊者受阻，並讓你獲得一個明顯的優勢。GM將會描述這個優勢是什麼。</p></div>
+	當你進行保衛動作時，你永遠獲得 +1 掌握，即使你擲出6-的結果也一樣。當你在保衛動作中擲出12+的結果時，你不獲得掌握，而是改為使最接近的攻擊者受阻，並讓你獲得一個明顯的優勢。GM將會描述這個優勢是什麼。</p></div>
 
 <div class="Move"><h3 class="MoveName">縱列打擊 (Tandem Strike)</h3>
 <p class="Requirement">取代: 預備打擊</p>
