--- a/classes/ranger/index.html
+++ b/classes/ranger/index.html
@@ -245,62 +245,78 @@
 	當你針對怪物進行憶述見聞時，你使用睿知來取代智力。</p></div>
 
 <div class="Move"><h3 class="MoveName">毒蛇雙襲 (Viper’s Strike)</h3>
-<p class="NoIndent">When you strike an enemy with two weapons at once, add an extra 1d4 damage for your off-hand strike.</p></div>
+<p class="NoIndent">
+	當你使用二把武器同時襲向一個敵人時，為你副手武器的打擊額外造成 1d4 傷害。</p></div>
 
 <div class="Move"><h3 class="MoveName">保護色 (Camouflage)</h3>
-<p class="NoIndent">When you <strong>keep still in natural surroundings</strong>, enemies never spot you until you make a movement.</p></div>
+<p class="NoIndent">
+	當你<strong>在自然環境中保持靜止不動</strong>時，則直到你動作之前，敵人將永遠不會發現你。</p></div>
 
 <div class="Move"><h3 class="MoveName">人類最好的朋友 (Man’s Best Friend)</h3>
-<p class="NoIndent">When you <strong>allow your animal companion to take a blow that was meant for you</strong>, the damage is negated and your animal companion’s ferocity becomes 0. If its ferocity is already 0 you can’t use this ability. When you have a few hours of rest with your animal companion its ferocity returns to normal.</p></div>
+<p class="NoIndent">
+	當你<strong>讓你的動物夥伴代為承受一次本應臨到你的打擊</strong>時，該傷害將被抵銷，且你動物夥伴的 兇猛值 將被歸零。若牠的 兇猛值 已經為 0 ，則你不能使用這個能力。當你和你的動物夥伴休息了數個小時的時間後，牠的 兇猛值 將會恢復原狀。</p></div>
 
 <div class="Move"><h3 class="MoveName">遮天箭雨 (Blot Out the Sun)</h3>
-<p class="NoIndent">When you volley you may spend extra ammo before rolling. For each point of ammo spent you may choose an extra target. Roll once and apply damage to all targets.</p></div>
+<p class="NoIndent">
+	當你進行射擊動作時，你可以在擲骰前消耗額外的彈藥。你每額外消耗一份彈藥，就可以再選擇一個額外的目標。你只需要擲一次骰，並將傷害應用於所有的目標身上。</p></div>
 
 <div class="Move"><h3 class="MoveName">充分訓練 (Well-Trained)</h3>
 <p class="NoIndent">
 	為你的動物夥伴再選擇一個訓練項。</p></div>
 
 <div class="Move"><h3 class="MoveName">荒蕪原野諸神 (God Amidst the Wastes)</h3>
-<p class="NoIndent">Dedicate yourself to a deity (name a new one or choose one that’s already been established). You gain the commune and cast a spell cleric moves. When you select this move, treat yourself as a cleric of level 1 for using spells. Every time you gain a level thereafter, increase your effective cleric level by 1.</p></div>
+<p class="NoIndent">
+	將你自己奉獻給一名神祇（為一個新的神取名、或選擇一個已經存在的神祇）。你獲得牧師動作中的通神和施放法術動作。當你獲得這個動作時，你在使用法術時將把你自己視作等級 1 的牧師。在這之後，每當你升級，你的有效牧師等級也會跟著提升 1 級。</p></div>
 
 <div class="Move"><h3 class="MoveName">隨我前來 (Follow Me)</h3>
-<p class="NoIndent">When you undertake a perilous journey you can take two roles. You make a separate roll for each.</p></div>
+<p class="NoIndent">
+	當你們踏上一段危險旅程時，你可以同時擔任二個職位。你為這些工作分別擲骰。</p></div>
 
-<div class="Move"><h3 class="MoveName">安居之所 (A Safe Place)</h3>
-<p class="NoIndent">When you <strong>set the watch for the night</strong>, everyone takes +1 to take watch.</p></div>
+<div class="Move"><h3 class="MoveName">安歇之所 (A Safe Place)</h3>
+<p class="NoIndent">
+	當你<strong>負責安排守夜</strong>時，所有人在進行守夜動作時獲得 +1 加值。</p></div>
 
 <p class="Instructions">當你的等級升至6~10，從下列動作或等級2~5的動作中選擇：</p>
 <div class="Move"><h3 class="MoveName">荒野之語</h3>
 <p class="Requirement">取代: 荒野共感</p>
-<p class="NoIndent">You can speak with and understand any non-magical, non-planar creature.</p></div>
+<p class="NoIndent">
+	你能夠與任何既非魔法、也非異位面的生物交談並理解牠們的意思。</p></div>
 
 <div class="Move"><h3 class="MoveName">獵人的獵物 (Hunter’s Prey)</h3>
 <p class="Requirement">取代: 熟悉的獵物</p>
-<p class="NoIndent">When you spout lore about a monster you use WIS instead of INT. On a 12+, in addition to the normal effects, you get to ask the GM any one question about the subject.</p></div>
+<p class="NoIndent">
+	當你針對怪物進行憶述見聞時，你使用睿知來取代智力。當擲出12+時，除了原本的效果外，你還能再任意詢問GM一個關於目標的問題。</p></div>
 
 <div class="Move"><h3 class="MoveName">毒蛇獠牙</h3>
 <p class="Requirement">取代: 毒蛇雙襲</p>
-<p class="NoIndent">When you strike an enemy with two weapons at once, add an extra 1d8 damage for your off-hand strike.</p></div>
+<p class="NoIndent">
+	當你使用二把武器同時襲向一個敵人時，為你副手武器的打擊額外造成 1d8 傷害。</p></div>
 
 <div class="Move"><h3 class="MoveName">巨龍的軟腹 (Smaug’s Belly)</h3>
-<p class="NoIndent">When you know your target’s weakest point your arrows have 2 piercing.</p></div>
+<p class="NoIndent">
+	當你知曉你目標的最大弱點時，你的箭矢被視作帶有<tag>2 穿透</tag>標籤。</p></div>
 
 <div class="Move"><h3 class="MoveName">奔行者 (Strider)</h3>
 <p class="Requirement">取代: 隨我前來</p>
-<p class="NoIndent">When you undertake a perilous journey you can take two roles. Roll twice and use the better result for both roles.</p></div>
+<p class="NoIndent">
+	當你們踏上一段危險旅程時，你可以同時擔任二個職位。你擲二次骰，並使用較好的結果應用於這兩個工作上。</p></div>
 
-<div class="Move"><h3 class="MoveName">安然之地 (A Safer Place)</h3>
-<p class="Requirement">取代: 安居之所</p>
-<p class="NoIndent">When you set the watch for the night everyone takes +1 to take watch. After a night in camp when you set the watch everyone takes +1 forward.</p></div>
+<div class="Move"><h3 class="MoveName">寧靜安歇之所 (A Safer Place)</h3>
+<p class="Requirement">取代: 安歇之所</p>
+<p class="NoIndent">
+	當你<strong>負責安排守夜</strong>時，所有人在進行守夜動作時獲得 +1 加值。在你負責安排守夜的那一晚過去之後，所有人獲得下次+1。</p></div>
 
 <div class="Move"><h3 class="MoveName">觀察敏銳 (Observant)</h3>
-<p class="NoIndent">When you hunt and track, on a hit you may also ask one question about the creature you are tracking from the discern realities list for free.</p></div>
+<p class="NoIndent">
+	當你進行狩獵與追跡動作時，擲出成功時，你可以再從審視現狀的問題清單中再挑選一個問題，詢問關於你所追蹤生物的情報。</p></div>
 
 <div class="Move"><h3 class="MoveName">特殊技倆 (Special Trick)</h3>
-<p class="NoIndent">Choose a move from another class. So long as you are working with your animal companion you have access to that move.</p></div>
+<p class="NoIndent">
+	從另一個職業中獲得一個動作。只要你與你的動物夥伴共同合作，你就能使用該動作。</p></div>
 
 <div class="Move"><h3 class="MoveName">超自然盟友 (Unnatural Ally)</h3>
-<p class="NoIndent">Your animal companion is a monster, not an animal. Describe it. Give it +2 ferocity and +1 instinct, plus a new training.</p></div></div>
+<p class="NoIndent">
+	你的動物夥伴是一隻怪物，而不是尋常動物。描述牠的情況。牠的 兇猛值+2 且 本能值+1，並再獲得一個新的訓練項。</p></div></div>
 
           </div>
        </div>
