--- a/classes/wizard/spells/index.html
+++ b/classes/wizard/spells/index.html
@@ -111,55 +111,89 @@
           <div class="col-md-8 col-md-offset-1">
              <div class="pseudoTitle">法師法術</div>
 <div><h1>戲法</h1>
-<p class="NoIndent">You prepare all of your cantrips every time you prepare spells without having to select them or count them toward your allotment of spells.</p>
+<p class="NoIndent">
+	每當你進行準備法術動作時，你將獲得你的所有戲法，你無須從中選擇、也不用把它們計入你的法術分配中。</p>
+
 <div class="Spell"><h3 class="SpellName">光亮術 (Light)<span class="Tags">	戲法</span></h3>
-<p class="NoIndent">An item you touch glows with arcane light, about as bright as a torch. It gives off no heat or sound and requires no fuel, but it is otherwise like a mundane torch. You have complete control of the color of the flame. The spell lasts as long as it is in your presence.</p></div>
-<div class="Spell"><h3 class="SpellName">隱形僕役 (Unseen Servant)<span class="Tags">	戲法 , Ongoing</span></h3>
-<p class="NoIndent">You conjure a simple invisible construct that can do nothing but carry items. It has load 3 and carries anything you hand to it. It cannot pick up items on its own and can only carry those you give to it. Items carried by an unseen servant appear to float in the air a few paces behind you. An unseen servant that takes damage or leaves your presence is immediately dispelled, dropping any items it carried. Otherwise the unseen servant serves you until you end the spell.</p></div>
+<p class="NoIndent">
+	一個被你觸碰的物品將發出祕法光輝，其亮度與火炬相當。它並不會散發熱量或聲音，也不需要燃料，但除此之外的特性便與尋常火炬一模一樣。你可以自由控制光輝的色彩。只要你在場，這個法術便會持續發揮效果。</p></div>
+
+<div class="Spell"><h3 class="SpellName">隱形僕役 (Unseen Servant)<span class="Tags">	戲法 , 持續</span></h3>
+<p class="NoIndent">
+	你召喚出一個簡單的隱形構裝體，它除了攜帶物品之外什麼事都不會做。它的負載上限為 3 重量，且會帶著任何你交給它的東西。它不會自己撿拾物品，也只能夠攜帶那些你交付給它的物品。被隱形僕役所攜帶的物品看起來就像是在你身後幾步的空中漂浮著。一個受到傷害、或者離開你面前的隱形僕役將立刻消散，並落下任何它原本攜帶的物品。除此之外的情況，它都將持續服侍你直到你終止這個法術。</p></div>
+
 <div class="Spell"><h3 class="SpellName">魔法技倆 (Prestidigitation)<span class="Tags">	戲法</span></h3>
-<p class="NoIndent">You perform minor tricks of true magic. If you touch an item as part of the casting you can make cosmetic changes to it: clean it, soil it, cool it, warm it, flavor it, or change its color. If you cast the spell without touching an item you can instead create minor illusions no bigger than yourself. Prestidigitation illusions are crude and clearly illusions—they won’t fool anyone, but they might entertain them.</p></div>
+<p class="NoIndent">
+	你使用真正的魔法表演一些小把戲。若你觸碰一個物體做為施法環節的一部份，你可以使該物體產生裝飾性的變化：清潔它、弄髒它、冷卻它、溫暖它、改變它的味道、或是改變它的顏色。若你在施法時沒有觸碰任何物體，則你可以改為創造出一個不大於你體型的微弱幻象。魔法技倆法術所創造的幻象相當粗糙，且很明顯是幻象──它無法愚弄任何人，但也許能娛樂他們。</p></div>
 <hr/>
+
 <div><h1>等級1 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">接觸靈體 (Contact Spirits)<span class="Tags">	Level 1	, 召喚系</span></h3>
-<p class="NoIndent">Name the spirit you wish to contact (or leave it to the GM). You pull that creature through the planes, just close enough to speak to you. It is bound to answer any one question you ask to the best of its ability.</p></div>
-<div class="Spell"><h3 class="SpellName">偵測魔法 (Detect Magic)<span class="Tags">	Level 1	, 預言系</span></h3>
-<p class="NoIndent">One of your senses is briefly attuned to magic. The GM will tell you what here is magical.</p></div>
-<div class="Spell"><h3 class="SpellName">心靈感應 (Telepathy)<span class="Tags">	Level 1	, 預言系, Ongoing</span></h3>
-<p class="NoIndent">You form a telepathic bond with a single person you touch, enabling you to converse with that person through your thoughts. You can only have one telepathic bond at a time.</p></div>
-<div class="Spell"><h3 class="SpellName">魅惑人類 (Charm Person)<span class="Tags">	Level 1	, 惑控系, Ongoing</span></h3>
-<p class="NoIndent">The person (not beast or monster) you touch while casting this spell counts you as a friend until they take damage or you prove otherwise.</p></div>
-<div class="Spell"><h3 class="SpellName">隱形術 (Invisibility)<span class="Tags">	Level 1	, 幻術系, Ongoing</span></h3>
-<p class="NoIndent">Touch an ally: nobody can see them. They’re invisible! The spell persists until the target attacks or you dismiss the effect. While the spell is ongoing you can’t cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">魔法飛彈 (Magic Missile)<span class="Tags">	Level 1	, 塑能系</span></h3>
-<p class="NoIndent">Projectiles of pure magic spring from your fingers. Deal 2d4 damage to one target.</p></div>
-<div class="Spell"><h3 class="SpellName">警報術 (Alarm)<span class="Tags">	Level 1</span></h3>
-<p class="NoIndent">Walk a wide circle as you cast this spell. Until you prepare spells again your magic will alert you if a creature crosses that circle. Even if you are asleep, the spell will shake you from your slumber.</p></div>
+<div class="Spell"><h3 class="SpellName">接觸靈體 (Contact Spirits)<span class="Tags">	等級 1	, 召喚系</span></h3>
+<p class="NoIndent">
+	指定一個你希望與之接觸的靈體（或留給GM決定）。該靈體將穿過重重位面被你拖引而至，剛好拉近到足以讓它與你對話的距離。它將盡其所能地回答一個你所提出的問題。</p></div>
+
+<div class="Spell"><h3 class="SpellName">偵測魔法 (Detect Magic)<span class="Tags">	等級 1	, 預言系</span></h3>
+<p class="NoIndent">
+	你的其中一種感官將能夠短暫地感應到魔法。GM將會告訴你這裡有什麼東西是帶有魔法的。</p></div>
+
+<div class="Spell"><h3 class="SpellName">心靈感應 (Telepathy)<span class="Tags">	等級 1	, 預言系, 持續</span></h3>
+<p class="NoIndent">
+	你與你所觸碰的一個人物之間將建立起一道心靈感應聯繫，讓你能夠透過思想與那個人交談。你同時只能擁有一道心靈感應聯繫。</p></div>
+
+<div class="Spell"><h3 class="SpellName">魅惑人類 (Charm Person)<span class="Tags">	等級 1	, 惑控系, 持續</span></h3>
+<p class="NoIndent">
+	你在施放這個法術時所碰觸的人物（不能是野獸或怪物）將視你為摯友，持續直到他受到傷害、或你證明事實並非如此。</p></div>
+
+<div class="Spell"><h3 class="SpellName">隱形術 (Invisibility)<span class="Tags">	等級 1	, 幻術系, 持續</span></h3>
+<p class="NoIndent">
+	觸碰一名同伴：現在再也沒有人能看見他。他隱形了！這個法術的效果將持續直到目標發動攻擊、或你解消這個效果。在這個法術持續期間，你無法施放法術。</p></div>
+
+<div class="Spell"><h3 class="SpellName">魔法飛彈 (Magic Missile)<span class="Tags">	等級 1	, 塑能系</span></h3>
+<p class="NoIndent">
+	你從手指釋放出純粹的魔法彈。對一個目標造成 2d4 傷害。</p></div>
+
+<div class="Spell"><h3 class="SpellName">警報術 (Alarm)<span class="Tags">	等級 1</span></h3>
+<p class="NoIndent">
+	在你施放這個法術的同時繞行圈起一個大圓圈。直到你再次進行準備法術動作之前，你的魔法都會在有任何生物穿過這個圓圈時警告你。即使你已經睡著，這個法術也會把你從沉睡中喚醒。</p></div>
 <hr/>
+
 <div><h1>等級3 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">解除魔法 (Dispel Magic)<span class="Tags">	Level 3</span></h3>
-<p class="NoIndent">Choose a spell or magic effect in your presence: this spell rips it apart. Lesser spells are ended, powerful magic is just reduced or dampened so long as you are nearby.</p></div>
-<div class="Spell"><h3 class="SpellName">視透時間 (Visions Through Time)<span class="Tags">	Level 3	, 預言系</span></h3>
-<p class="NoIndent">Cast this spell and gaze into a reflective surface to see into the depths of time. The GM will reveal the details of a grim portent to you—a bleak event that will come to pass without your intervention. They’ll tell you something useful about how you can interfere with the grim portent’s dark outcomes. Rare is the portent that claims “You’ll live happily ever after.” Sorry.</p></div>
-<div class="Spell"><h3 class="SpellName">火球術 (Fireball)<span class="Tags">	Level 3	, 塑能系</span></h3>
-<p class="NoIndent">You evoke a mighty ball of flame that envelops your target and everyone nearby, inflicting 2d6 damage which ignores armor.</p></div>
-<div class="Spell"><h3 class="SpellName">擬形術 (Mimic)<span class="Tags">	Level 3	, Ongoing</span></h3>
-<p class="NoIndent">You take the form of someone you touch while casting this spell. Your physical characteristics match theirs exactly but your behavior may not. This change persists until you take damage or choose to return to your own form. While this spell is ongoing you lose access to all your wizard moves.</p></div>
-<div class="Spell"><h3 class="SpellName">鏡影術 (Mirror Image)<span class="Tags">	Level 3	, 幻術系</span></h3>
-<p class="NoIndent">You create an illusory image of yourself. When you are attacked, roll a d6. On a 4, 5, or 6 the attack hits the illusion instead, the image then dissipates and the spell ends.</p></div>
-<div class="Spell"><h3 class="SpellName">睡眠術 (Sleep)<span class="Tags">	Level 3	, 惑控系</span></h3>
-<p class="NoIndent">1d4 enemies you can see of the GM’s choice fall asleep. Only creatures capable of sleeping are affected. They awake as normal: loud noises, jolts, pain.</p></div>
+<div class="Spell"><h3 class="SpellName">解除魔法 (Dispel Magic)<span class="Tags">	等級 3</span></h3>
+<p class="NoIndent">
+	選擇一個在你面前發生的法術或魔法效果：這個法術將把它撕毀驅散。較為弱小的法術會立即被終止，而強大的魔法則只會被減弱、或當你待在附近時被抑制。</p></div>
+
+<div class="Spell"><h3 class="SpellName">視透時間 (Visions Through Time)<span class="Tags">	等級 3	, 預言系</span></h3>
+<p class="NoIndent">
+	施放這個法術，並凝視一個能夠反光的平面（例如鏡子或水池）以窺探時間長河的深處。GM將會向你揭露一個不祥預兆的細節──一個若你不介入干涉就篤定會發生的昏暗事件。它會告訴你一些有用的情報，讓你知道該如何干涉這個不祥預兆所帶來的黑暗後果。這個未來預兆很少會告訴你「你從此過著幸福快樂的生活」，抱歉。</p></div>
+
+<div class="Spell"><h3 class="SpellName">火球術 (Fireball)<span class="Tags">	等級 3	, 塑能系</span></h3>
+<p class="NoIndent">
+	你喚出一團巨大的火球吞噬你的目標以及附近的所有人，造成 2d6 點無視護甲的傷害。</p></div>
+
+<div class="Spell"><h3 class="SpellName">擬形術 (Mimic)<span class="Tags">	等級 3	, 持續</span></h3>
+<p class="NoIndent">
+	你變化成你在施放這個法術所觸碰的對象。你的身體特徵變得與他完全一致，但你的行為舉止則則不一定如此。這個變化將持續直到你受到傷害、或選擇變回你原本的型態。在這個法術持續期間，你將無法使用你的任何法師動作。</p></div>
+
+<div class="Spell"><h3 class="SpellName">鏡影術 (Mirror Image)<span class="Tags">	等級 3	, 幻術系</span></h3>
+<p class="NoIndent">
+	你創造出一個你自己的幻影鏡像。當你遭受攻擊時，擲一顆 d6。若擲出 4, 5, 或 6 時，該攻擊將改為擊中幻象，該幻象將因此消散，且這個法術也隨之終止。</p></div>
+
+<div class="Spell"><h3 class="SpellName">睡眠術 (Sleep)<span class="Tags">	等級 3	, 惑控系</span></h3>
+<p class="NoIndent">
+	 1d4 個你所能看見，且由GM選擇的敵人將會陷入沉睡。只有能夠睡著的生物會受到這個法術的影響。他們也會如平常一樣被叫醒：像是因為噪音、搖動、或痛苦等等。</p></div>
 <hr/>
+
 <div><h1>等級5 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">力場監牢 (Cage)<span class="Tags">	Level 5	, 塑能系, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">力場監牢 (Cage)<span class="Tags">	等級 5	, 塑能系, 持續</span></h3>
 <p class="NoIndent">The target is held in a cage of magical force. Nothing can get in or out of the cage. The cage remains until you cast another spell or dismiss it. While the spell is ongoing, the caged creature can hear your thoughts and you cannot leave sight of the cage.</p></div>
-<div class="Spell"><h3 class="SpellName">異界探知 (Contact Other Plane)<span class="Tags">	Level 5	, 預言系</span></h3>
+<div class="Spell"><h3 class="SpellName">異界探知 (Contact Other Plane)<span class="Tags">	等級 5	, 預言系</span></h3>
 <p class="NoIndent">You send a request to another plane. Specify who or what you’d like to contact by location, type of creature, name, or title. You open a two-way communication with that creature. Your communication can be cut off at any time by you or the creature you contacted.</p></div>
-<div class="Spell"><h3 class="SpellName">變形術 (Polymorph)<span class="Tags">	Level 5	, 惑控系</span></h3>
+<div class="Spell"><h3 class="SpellName">變形術 (Polymorph)<span class="Tags">	等級 5	, 惑控系</span></h3>
 <p class="NoIndent">Your touch reshapes a creature entirely, they stay in the form you craft until you cast a spell. Describe the new shape you craft, including any stat changes, significant adaptations, or major weaknesses. The GM will then tell you one or more of these:</p>
 <ul><li>The form will be unstable and temporary</li>
 <li>The creature’s mind will be altered as well</li>
 <li>The form has an unintended benefit or weakness</li></ul></div>
-<div class="Spell"><h3 class="SpellName">怪物召喚術 (Summon Monster)<span class="Tags">	Level 5	, 召喚系, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">怪物召喚術 (Summon Monster)<span class="Tags">	等級 5	, 召喚系, 持續</span></h3>
 <p class="NoIndent">A monster appears and aids you as best it can. Treat it as your character, but with access to only the basic moves. It has +1 modifier for all stats, 1 HP, and uses your damage dice. The monster also gets your choice of 1d6 of these traits: </p>
 <ul><li>It has +2 instead of +1 to one stat</li>
 <li>It’s not reckless</li>
@@ -169,32 +203,35 @@
 <p class="NoIndent">The GM will tell you the type of monster you get based on the traits you select. The creature remains on this plane until it dies or you dismiss it. While the spell is ongoing you take -1 to cast a spell.</p></div>
 <hr/>
 <div><h1>等級7 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">支配術 (Dominate)<span class="Tags">	Level 7	, 惑控系, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">支配術 (Dominate)<span class="Tags">	等級 7	, 惑控系, 持續</span></h3>
 <p class="NoIndent">Your touch pushes your mind into someone else’s. You gain 1d4 hold. Spend one hold to make the target take one of these actions:</p>
 <ul><li>Speak a few words of your choice</li>
 <li>Give you something they hold</li>
 <li>Make a concerted attack on a target of your choice</li>
 <li>Truthfully answer one question</li></ul>
 <p class="NoIndent">If you run out of hold the spell ends. If the target takes damage you lose 1 hold. While the spell is ongoing you cannot cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">真知術 (True Seeing)<span class="Tags">	Level 7	, 預言系, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">真知術 (True Seeing)<span class="Tags">	等級 7	, 預言系, 持續</span></h3>
 <p class="NoIndent">You see all things as they truly are. This effect persists until you tell a lie or dismiss the spell. While this spell is ongoing you take -1 to cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">行影術 (Shadow Walk)<span class="Tags">	Level 7	, 幻術系</span></h3>
+<div class="Spell"><h3 class="SpellName">行影術 (Shadow Walk)<span class="Tags">	等級 7	, 幻術系</span></h3>
 <p class="NoIndent">The shadows you target with this spell become a portal for you and your allies. Name a location, describing it with a number of words up to your level. Stepping through the portal deposits you and any allies present when you cast the spell at the location you described. The portal may only be used once by each ally.</p></div>
-<div class="Spell"><h3 class="SpellName">觸發術 (Contingency)<span class="Tags">	Level 7, 塑能系</span></h3>
+<div class="Spell"><h3 class="SpellName">觸發術 (Contingency)<span class="Tags">	等級 7, 塑能系</span></h3>
 <p class="NoIndent">Choose a 5th level or lower spell you know. Describe a trigger condition using a number of words equal to your level. The chosen spell is held until you choose to unleash it or the trigger condition is met, whichever happens first. You don’t have to roll for the held spell, it just takes effect. You may only have a single contingent spell held at a time; if you cast Contingency while you have a held spell, the new held spell replaces the old one.</p></div>
-<div class="Spell"><h3 class="SpellName">死雲術 (Cloudkill)<span class="Tags">	Level 7, 召喚系, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">死雲術 (Cloudkill)<span class="Tags">	等級 7, 召喚系, 持續</span></h3>
 <p class="NoIndent">A cloud of fog drifts into this realm from beyond the Black Gates of Death, filling the immediate area. Whenever a creature in the area takes damage it takes an additional, separate 1d6 damage which ignores armor. This spell persists so long as you can see the affected area, or until you dismiss it.</p></div>
 <hr/>
 <div><h1>等級9 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">嫌惡術 (Antipathy)<span class="Tags">	Level 9, 惑控系, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">嫌惡術 (Antipathy)<span class="Tags">	等級 9, 惑控系, 持續</span></h3>
 <p class="NoIndent">Choose a target and describe a type of creature or an alignment. Creatures of the specified type or alignment cannot come within sight of the target. If a creature of the specified type does find itself within sight of the target, it immediately flees. This effect continues until you leave the target’s presence or you dismiss the spell. While the spell is ongoing you take -1 to cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">預警術 (Alert)<span class="Tags">	Level 9, 預言系</span></h3>
+<div class="Spell"><h3 class="SpellName">預警術 (Alert)<span class="Tags">	等級 9, 預言系</span></h3>
 <p class="NoIndent">Describe an event. The GM will tell you when that event occurs, no matter where you are or how far away the event is. If you choose, you can view the location of the event as though you were there in person. You can only have one Alert active at a time.</p></div>
-<div class="Spell"><h3 class="SpellName">囚魂寶石 (Soul Gem)<span class="Tags">	Level 9</span></h3>
-<p class="NoIndent">You trap the soul of a dying creature within a gem. The trapped creature is aware of its imprisonment but can still be manipulated through spells, parley, and other effects. All moves against the trapped creature are at +1. You can free the soul at any time but it can never be recaptured once freed.</p></div>
-<div class="Spell"><h3 class="SpellName">庇護所 (Shelter)<span class="Tags">	Level 9, 塑能系, Ongoing</span></h3>
+
+<div class="Spell"><h3 class="SpellName">囚魂寶石 (Soul Gem)<span class="Tags">	等級 9</span></h3>
+<p class="NoIndent">
+	你將一個垂死生物的靈魂囚禁在一顆寶石之中。被囚禁的生物會意識到自己被囚禁，但仍能透過法術、談判、和其他效果而被操弄。所有針對被囚禁生物所進行的動作都將獲得 +1 加值。你可以在任何時候將靈魂從中釋放，然而一旦被釋放，它就再也無法被重新禁錮。</p></div>
+
+<div class="Spell"><h3 class="SpellName">庇護所 (Shelter)<span class="Tags">	等級 9, 塑能系, 持續</span></h3>
 <p class="NoIndent">You create a structure out of pure magical power. It can be as large as a castle or as small as a hut, but is impervious to all non-magical damage. The structure endures until you leave it or you end the spell.</p></div>
-<div class="Spell"><h3 class="SpellName">完美召喚術 (Perfect Summons)<span class="Tags">	Level 9, 召喚系</span></h3>
+<div class="Spell"><h3 class="SpellName">完美召喚術 (Perfect Summons)<span class="Tags">	等級 9, 召喚系</span></h3>
 <p class="NoIndent">You teleport a creature to your presence. Name a creature or give a short description of a type of creature. If you named a creature, that creature appears before you. If you described a type of creature, a creature of that type appears before you.</p></div></div>
 
           </div>
