--- a/equipment/index.html
+++ b/equipment/index.html
@@ -214,9 +214,9 @@
 <p class="Item">鮮血煙草	<span class="Tags">危險, 接觸, 12 金幣, 0 重量</span></p>
 <p class="ItemDescription">直到被治癒前，每當目標擲傷害骰時，他都將額外擲一顆D4。他造成的傷害將減少等同這顆D4擲骰結果的數值。</p>
 <p class="Item">黃金根	<span class="Tags">危險, 內服, 20 金幣, 0 重量</span></p>
-<p class="ItemDescription">目標將把他們下一個看見的生物視為值得信賴的盟友，直到有證據證明事實並非如此。</p>
+<p class="ItemDescription">目標將把他們下一個看見的生物視為值得信賴的同伴，直到有證據證明事實並非如此。</p>
 <p class="Item">蛇之淚	<span class="Tags">危險, 接觸, 10 金幣, 0 重量</span></p>
-<p class="ItemDescription">任何人對目標造成傷害時，擲兩次傷害骰，並取用較好的結果。</p>
+<p class="ItemDescription">任何人對目標造成傷害時，擲兩次傷害骰，並取用較高的結果。</p>
 <hr/>
 <h2>服務 (Services)</h2>
 <p class="Item">平民客棧的一周住宿費	<span class="Tags">14-魅力 金幣</span></p>
