--- a/classes/wizard/index.html
+++ b/classes/wizard/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>The Wizard | 地城世界 HTML SRD</title>
+  <title>法師 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -111,7 +111,7 @@
           <div class="col-md-8 col-md-offset-1">
              
 
-<h1>The Wizard</h1>
+<h1>法師</h1>
 <div id="intro"><p class="NoIndent">Dungeon World has rules. Not the laws of men or the rule of some petty tyrant. Bigger, better rules. You drop something—it falls. You can’t make something out of nothing. The dead stay dead, right?</p>
 <p>Oh, the things we tell ourselves to feel better about the long, dark nights.</p>
 <p>You’ve spent so very long poring over those tomes of yours. The experiments that nearly drove you mad and all the botched summonings that endangered your very soul. For what? For power. What else is there? Not just the power of King or Country but the power to boil a man’s blood in his veins. To call on the thunder of the sky and the churn of the roiling earth. To shrug off the rules the world holds so dear.</p>
@@ -124,10 +124,10 @@
 <hr/>
 <h2>外觀</h2>
 <div id="look"><p class="InstructionsAfterHeader">從每列中各自選擇一項：</p>
-<ul><li>Haunted Eyes, Sharp Eyes, or Crazy Eyes</li>
-<li>Styled Hair, Wild Hair, or Pointed Hat</li>
-<li>Worn Robes, Stylish Robes, or Strange Robes</li>
-<li>Pudgy Body, Creepy Body, or Thin Body</li></ul></div>
+<ul><li>著魔的眼神, 銳利的眼神, 或 瘋狂的眼神</li>
+<li>時尚的髮型, 狂亂的髮型, 或 巫師尖帽</li>
+<li>老舊長袍, 漂亮長袍, 或 古怪長袍</li>
+<li>矮胖的體型, 詭異的體型, 或 消瘦的體型</li></ul></div>
 <hr/>
 <h2>屬性數值</h2>
 <p class="NoIndent">你的最大生命值為 4+體質值。</p>
@@ -136,35 +136,50 @@
 <h2>起始動作</h2>
 <div id="startingmoves"><p class="InstructionsAfterHeader">選擇一個種族並獲得相應的動作：</p>
 <div id="racialmoves"><div class="Move"><h3 class="MoveName">精靈</h3>
-<p class="NoIndent">Magic is as natural as breath to you. Detect Magic is a cantrip for you.</p></div>
+<p class="NoIndent">魔法對你而言就如呼吸般自然。對你而言，<u>偵測魔法</u>法術將被視作戲法。</p></div>
 <div class="Move"><h3 class="MoveName">人類</h3>
-<p class="NoIndent">Choose one cleric spell. You can cast it as if it was a wizard spell.</p></div></div>
+<p class="NoIndent">選擇一個牧師法術。你可以把它視作法師法術一樣施放。</p></div></div>
 
 <div id="classmoves"><p class="Instructions">你起始還擁有以下動作：</p>
 <div class="Move"><h3 class="BasicMoveName">法術書 (Spellbook)</h3>
-<p class="NoIndent">You have mastered several spells and inscribed them in your spellbook. You start out with three first level spells in your spellbook as well as the cantrips. Whenever you gain a level, you add a new spell of your level or lower to your spellbook. You spellbook is 1 weight.</p></div>
+<p class="NoIndent">
+	你精通許多法術並將其抄寫進你的法術書中。你的法術書中起始寫有三個 等級1 的法術 和 三個戲法。每當你升級，將一個法術等級低於或等於你角色等級的法術加到法術書中。你的法術書有 <tag>1 重量</tag>。</p></div>
+
 <div class="Move"><h3 class="BasicMoveName">準備法術 (Prepare Spells)</h3>
-<p class="NoIndent">When you <strong>spend uninterrupted time (an hour or so) in quiet contemplation of your spellbook</strong>, you:</p>
-<ul><li>Lose any spells you already have prepared</li>
-<li>Prepare new spells of your choice from your spellbook whose total levels don’t exceed your own level+1.</li>
-<li>Prepare your cantrips which never count against your limit.</li></ul></div>
+<p class="NoIndent">
+	當你<strong>花費一段時間（一小時以上）不被打擾地安靜研究你的法術書</strong>，你將：</p>
+<ul>
+	<li>失去所有你已經準備好的法術。</li>
+	<li>準備你所選擇的新法術，其等級總和不能超過你自身的等級+1。</li>
+	<li>準備好你所有的戲法。戲法永遠不會被計入你的準備法術上限。</li></ul></div>
+
 <div class="Move"><h3 class="BasicMoveName">施放法術(智力) (Cast a Spell)</h3>
-<p class="NoIndent">When you <strong>release a spell you’ve prepared</strong>, roll+Int. ✴On a 10+, the spell is successfully cast and you do not forget the spell—you may cast it again later. ✴On a 7-9, the spell is cast, but choose one:</p>
-<ul><li>You draw unwelcome attention or put yourself in a spot. The GM will tell you how.</li>
-<li>The spell disturbs the fabric of reality as it is cast—take -1 ongoing to cast a spell until the next time you Prepare Spells.</li>
-<li>After it is cast, the spell is forgotten. You cannot cast the spell again until you prepare spells.</li></ul>
-<p class="NoIndent">Note that maintaining spells with ongoing effects will sometimes cause a penalty to your roll to cast a spell.</p></div>
+<p class="NoIndent">
+	當你<strong>施放一個你已經準備好的法術</strong>時，擲+智力：<br/>
+	✴擲出10+時，該法術被成功施放，且你並未遺忘該法術，因此你之後仍可以再次施展該法術。<br/>
+	✴擲出7-9時，該法術被施放，但你必須選擇一項：</p>
+<ul>
+	<li>你引來了不必要的注意、或將自己置身危險當中。GM會告訴你發生了什麼事。</li>
+	<li>你施放法術的行為擾亂了現實世界的經緯──直到下次你進行準備法術動作之前，你的施放法術動作將獲得持續-1。</li>
+	<li>在你施法後，該法術被你遺忘。直到你下次進行準備法術動作之前，你都無法再次施放該法術。</li></ul>
+<p class="NoIndent">
+	注意，維持一個帶有<tag>持續</tag>標籤的法術效果，有時會導致你在進行施放法術動作時承受減值。</p></div>
+
 <div class="Move"><h3 class="BasicMoveName">法術防禦 (Spell Defense)</h3>
-<p class="NoIndent">You may end any ongoing spell immediately and use the energy of its dissipation to deflect an oncoming attack. The spell ends and you subtract its level from the damage done to you.</p></div>
+<p class="NoIndent">
+	你可以立即終止任何你正在維持的持續性法術，並使用消散的法術能量來偏轉攻擊。該法術將因此終止，且你可以把對你造成的傷害減去等同該法術等級的數值。</p></div>
+
 <div class="Move"><h3 class="BasicMoveName">儀式 (Ritual)</h3>
-<p class="NoIndent">When you <strong>draw on a place of power to create a magical effect</strong>, tell the GM what you’re trying to achieve. Ritual effects are always possible, but the GM will give you one to four of the following conditions:</p>
-<ul><li>It’s going to take days/weeks/months</li>
-<li>First you must ____</li>
-<li>You’ll need help from ____</li>
-<li>It will require a lot of money</li>
-<li>The best you can do is a lesser version, unreliable and limited</li>
-<li>You and your allies will risk danger from ____</li>
-<li>You’ll have to disenchant ____ to do it</li></ul></div></div></div>
+<p class="NoIndent">
+	當你<strong>在能量匯聚之地繪製法陣來創造出魔法效果</strong>時，告訴GM你想要達成什麼樣的效果。所有儀式效果都是有可能實現的，但GM會要求你先達成下列一到四個條件：</p>
+<ul>
+	<li>這將需要花上數天／數周／數月的時間</li>
+	<li>首先你必須要 ____</li>
+	<li>你需要得到來自 ____ 的幫助</li>
+	<li>這將需要大量的金錢</li>
+	<li>你最多只能達成一個較差的版本，不可靠且效果有限</li>
+	<li>你和你的同伴將需要冒著 ____ 的風險</li>
+	<li>你需要驅除 ____ 的魔法效果才能做到。</li></ul></div></div></div>
 <hr/>
 
 <h2>陣營</h2>
@@ -197,9 +212,9 @@
 
 <h2>羈絆</h2>
 <div id="bonds"><p class="NoIndent">在至少一個欄位中填入你其中一名同伴的名字：</p>
-<p>_______________ will play an important role in the events to come. I have foreseen it!</p>
-<p>_______________ is keeping an important secret from me.</p>
-<p>_______________ is woefully misinformed about the world; I will teach them all that I can.</p></div>
+<p>_______________ 將在即將到來的事件中扮演重要的角色。我已經預見了！</p>
+<p>_______________ 對我隱瞞了一個重要的祕密。</p>
+<p>_______________ 對這個世界有著可悲的誤解；我將盡我所能的教導他。</p></div>
 <hr/>
 
 <h2>進階動作</h2>
@@ -208,26 +223,49 @@
 <p class="NoIndent">
 	選擇一個法術。當你準備該法術時，將該法術的等級視作比原本低一級。</p></div>
 
-<div class="Move"><h3 class="MoveName">Empowered Magic</h3>
-<p class="NoIndent">When you cast a spell, on a 10+ you have the option of choosing from the 7-9 list. If you do, you may choose one of these as well:</p>
-<ul><li>The spell’s effects are maximized</li>
-<li>The spell’s targets are doubled</li></ul></div>
-<div class="Move"><h3 class="MoveName">Fount of Knowledge</h3>
-<p class="NoIndent">When you <strong>spout lore about something no one else has any clue about</strong>, take +1.</p></div>
-<div class="Move"><h3 class="MoveName">Know-It-All</h3>
-<p class="NoIndent">When <strong>another player’s character comes to you for advice and you tell them what you think is best</strong>, they get +1 forward when following your advice and you mark experience if they do.</p></div>
-<div class="Move"><h3 class="MoveName">Expanded Spellbook</h3>
-<p class="NoIndent">Add a new spell from the spell list of any class to your spellbook.</p></div>
-<div class="Move"><h3 class="MoveName">Enchanter</h3>
-<p class="NoIndent">When you have time and safety with a magic item you may ask the GM what it does, the GM will answer you truthfully.</p></div>
-<div class="Move"><h3 class="MoveName">Logical</h3>
-<p class="NoIndent">When you <strong>use strict deduction to analyze your surroundings</strong>, you can discern realities with INT instead of WIS.</p></div>
-<div class="Move"><h3 class="MoveName">Arcane Ward</h3>
-<p class="NoIndent">As long as you have at least one prepared spell of first level or higher, you have +2 armor.</p></div>
-<div class="Move"><h3 class="MoveName">Counterspell</h3>
-<p class="NoIndent">When you <strong>attempt to counter an arcane spell that will otherwise affect you</strong>, stake one of your prepared spells on the defense and roll+Int. ✴On a 10+, the spell is countered and has no effect on you. ✴On a 7-9, the spell is countered and you forget the spell you staked. Your counterspell protects only you; if the countered spell has other targets they get its effects.</p></div>
-<div class="Move"><h3 class="MoveName">Quick Study</h3>
-<p class="NoIndent">When you <strong>see the effects of an arcane spell</strong>, ask the GM the name of the spell and its effects. You take +1 when acting on the answers.</p></div>
+<div class="Move"><h3 class="MoveName">強效魔法 (Empowered Magic)</h3>
+<p class="NoIndent">
+	當你進行施展法術動作時，即使你擲出10+結果，你也可以選擇7-9結果的選項。如果你這麼做，你可以從下列效果中選擇一項：</p>
+<ul>
+	<li>該法術的效果最大化</li>
+	<li>該法術影響的目標數量變為兩倍</li></ul></div>
+
+<div class="Move"><h3 class="MoveName">知識之泉 (Fount of Knowledge)</h3>
+<p class="NoIndent">
+	當你<strong>針對沒有人知道的事物進行憶述見聞</strong>時，獲得 +1 加值。</p></div>
+
+<div class="Move"><h3 class="MoveName">萬事通 (Know-It-All)</h3>
+<p class="NoIndent">
+	當<strong>其他玩家角色向你尋求建議，且你對他們說了你所能想到最好的意見</strong>，則當他們遵循你的建議行事時，他們獲得下次+1，且你標記一點經驗值。</p></div>
+
+<div class="Move"><h3 class="MoveName">擴展法術書 (Expanded Spellbook)</h3>
+<p class="NoIndent">
+	從任意職業的法術列表中將一個法術加入到你的法術書中。</p></div>
+
+<div class="Move"><h3 class="MoveName">附魔師 (Enchanter)</h3>
+<p class="NoIndent">
+	當你有充足的時間安全地研究一個魔法物品時，你可以向GM詢問它的效果，且GM會據實以告。</p></div>
+
+<div class="Move"><h3 class="MoveName">邏輯思考 (Logical)</h3>
+<p class="NoIndent">
+	當你<strong>使用嚴謹的邏輯演繹去分析周遭環境</strong>時，你在進行審視現狀時可以使用智力來取代睿知。</p></div>
+
+<div class="Move"><h3 class="MoveName">奧法防護 (Arcane Ward)</h3>
+<p class="NoIndent">
+	只要你還有至少一個準備好的一級或更高等級的法術，你獲得 +2 護甲值。</p></div>
+
+<div class="Move"><h3 class="MoveName">反制法術 (Counterspell)</h3>
+<p class="NoIndent">
+	當你<strong>嘗試反制一個將要影響你的奧秘法術</strong>時，拿出一個你準備好的法術當做防禦的賭注，擲+智力：<br/>
+	✴擲出10+時，該法術被反制，且不會對你產生任何影響。<br/>
+	✴擲出7-9時，該法術被反制，但你也將遺忘你拿來當做賭注的法術。</p>
+<p class="NoIndent">
+	你的反制法術動作只會保護你自己；若被反制的法術有其他目標，則他們仍會受到該法術效果的影響。</p></div>
+
+<div class="Move"><h3 class="MoveName">高速研究 (Quick Study)</h3>
+<p class="NoIndent">
+	當你<strong>看見一個奧秘法術的效果</strong>時，向GM詢問該法術的名稱以及效果。當你依據答案而採取行動時，你獲得 +1 加值。</p></div>
+
 
 <p class="Instructions">當你的等級升至6~10，從下列動作或等級2~5的動作中選擇：</p>
 <div class="Move"><h3 class="MoveName">宗師 (Master)</h3>
@@ -235,31 +273,49 @@
 <p class="NoIndent">
 	選擇一個法術（不能是你在奇才中所選的法術）。當你準備該法術時，將該法術的等級視作比原本低一級。</p></div>
 
-<div class="Move"><h3 class="MoveName">Greater Empowered Magic</h3>
-<p class="Requirement">Replaces: Empowered Magic</p>
-<p class="NoIndent">When you cast a spell, on a 10-11 you have the option of choosing from the 7-9 list. If you do, you may choose one of these effects as well. On a 12+ you get to choose one of these effects for free:</p>
-<ul><li>The spell’s effects are doubled</li>
-<li>The spell’s targets are doubled</li></ul></div>
-<div class="Move"><h3 class="MoveName">Enchanter’s Soul</h3>
-<p class="Requirement">Requires: Enchanter</p>
-<p class="NoIndent">When you have time and safety with a magic item in a place of power you can empower that item so that the next time you use it its effects are amplified, the GM will tell you exactly how.</p></div>
-<div class="Move"><h3 class="MoveName">Highly Logical</h3>
-<p class="Requirement">Replaces: Logical</p>
-<p class="NoIndent">When you <strong>use strict deduction to analyze your surroundings</strong>, you can discern realities with Int instead of Wis. On a 12+ you get to ask the GM any three questions, not limited by the list.</p></div>
-<div class="Move"><h3 class="MoveName">Arcane Armor</h3>
-<p class="Requirement">Replaces: Arcane Ward</p>
-<p class="NoIndent">As long as you have at least one prepared spell of first level or higher, you have +4 armor.</p></div>
-<div class="Move"><h3 class="MoveName">Protective Counter</h3>
-<p class="Requirement">Requires: Counterspell</p>
-<p class="NoIndent">When an ally within sight of you is affected by an arcane spell, you can counter it as if it affected you. If the spell affects multiple allies you must counter for each ally separately.</p></div>
-<div class="Move"><h3 class="MoveName">Ethereal Tether</h3>
-<p class="NoIndent">When you have time with a willing or helpless subject you can craft an ethereal tether with them. You perceive what they perceive and can discern realities about someone tethered to you or their surroundings no matter the distance. Someone willingly tethered to you can communicate with you over the tether as if you were in the room with them.</p></div>
-<div class="Move"><h3 class="MoveName">Mystical Puppet Strings</h3>
-<p class="NoIndent">When you <strong>use magic to control a person’s actions</strong> they have no memory of what you had them do and bear you no ill will.</p></div>
-<div class="Move"><h3 class="MoveName">Spell Augmentation</h3>
-<p class="NoIndent">When you <strong>deal damage to a creature</strong> you can shunt a spell’s energy into them—end one of your ongoing spells and add the spell’s level to the damage dealt.</p></div>
-<div class="Move"><h3 class="MoveName">Self-Powered</h3>
-<p class="NoIndent">When you have time, arcane materials, and a safe space, you can create your own place of power. Describe to the GM what kind of power it is and how you’re binding it to this place, the GM will tell you one kind of creature that will have an interest in your workings.</p></div></div>
+<div class="Move"><h3 class="MoveName">高等強效魔法 (Greater Empowered Magic)</h3>
+<p class="Requirement">取代: 強效魔法</p>
+<p class="NoIndent">
+	當你進行施展法術動作時，若擲出10-11，你可以選擇7-9結果中的選項。如果你這麼做，你可以從下列效果中選擇一項。若擲出12+，則你可以直接從下列效果中選擇一項：</p>
+<ul>
+	<li>該法術的效果變為兩倍</li>
+	<li>該法術影響的目標數量變為兩倍</li></ul></div>
+
+<div class="Move"><h3 class="MoveName">附魔師之魂 (Enchanter’s Soul)</h3>
+<p class="Requirement">需求: 附魔師</p>
+<p class="NoIndent">
+	當你有充足的時間在能量匯聚之地安全地研究一個魔法物品時，你可以注魔強化該物品，讓你在下次使用它的時候使其效果增幅，GM會告訴你它被增幅後的確切效果。</p></div>
+
+<div class="Move"><h3 class="MoveName">高等邏輯思考 (Highly Logical)</h3>
+<p class="Requirement">取代: 邏輯思考</p>
+<p class="NoIndent">
+	當你<strong>使用嚴謹的邏輯演繹去分析周遭環境</strong>,時，你在進行審視現狀時可以使用智力來取代睿知。擲出12+時，你能夠詢問GM任意三個問題，這三個問題並不限於列表中的問題。</p></div>
+
+<div class="Move"><h3 class="MoveName">奧法護甲 (Arcane Armor)</h3>
+<p class="Requirement">取代: 奧法防護</p>
+<p class="NoIndent">
+	只要你還有至少一個準備好的一級或更高等級的法術，你獲得 +4 護甲值。</p></div>
+
+<div class="Move"><h3 class="MoveName">防護性反制 (Protective Counter)</h3>
+<p class="Requirement">需求: 反制法術</p>
+<p class="NoIndent">
+	當一個在你視線範圍內的同伴將要受到一個奧秘法術的影響時，你可以如同該法術將要影響你一樣反制它。若該法術會影響複數個同伴，則你必須分別為每個同伴進行反制。</p></div>
+
+<div class="Move"><h3 class="MoveName">乙太繫鏈 (Ethereal Tether)</h3>
+<p class="NoIndent">
+	當你有充足的時間陪伴一名自願或無法抵抗的目標時，你可以打造一條與他相連乙太繫鏈。無論你與他之間的距離有多遠，你都能察覺到他所察覺的事物，且可以針對他們或他們周遭的環境進行審視現狀。自願連繫於你的目標可以透過這條繫鏈與你溝通，就彷彿你與他共處於同一個房間一樣。</p></div>
+
+<div class="Move"><h3 class="MoveName">秘法操偶線 (Mystical Puppet Strings)</h3>
+<p class="NoIndent">
+	當你<strong>使用魔法控制某個人的行動</strong>時，他們不會留下任何你控制他們行動的相關記憶，也不會因此對你懷有惡意。</p></div>
+
+<div class="Move"><h3 class="MoveName">法術增幅 (Spell Augmentation)</h3>
+<p class="NoIndent">
+	當你<strong>對一個生物造成傷害</strong>時，你可以將某個法術的能量全數灌注到他們身上──終止一個你正在維持的持續性法術，並將該法術的等級加到你所造成的傷害上。</p></div>
+
+<div class="Move"><h3 class="MoveName">匯聚能量 (Self-Powered)</h3>
+<p class="NoIndent">
+	當你有充足的時間、奧法材料、並置身於一處安全的場所時，你可以打造出屬於你自己的能量匯聚之地。向GM描述你匯聚了什麼樣的能量、以及你是如何將其連結匯聚於這個場所，GM將會告訴你一種可能會對你的成果產生興趣的生物。</p></div></div>
 
           </div>
        </div>
